Finish revising the discussion

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -67,8 +67,7 @@
   pmid = {22743772},
   issn = {1548-7091,1548-7105},
   url = {http://dx.doi.org/10.1038/nmeth.2019},
-  keywords = {Manuscript;Cephalic furrow mechanics;Brachiopod wnt
-  landscape;Cephalic furrow patterning}
+  keywords = {Manuscript;Cephalic furrow mechanics;Brachiopod wnt landscape}
 }
 
 @ARTICLE{Harding1986-ei,
@@ -357,7 +356,7 @@
   url = {http://dx.doi.org/10.1186/s12859-017-1934-z},
   keywords = {Extensibility; Image processing; ImageJ; ImageJ2;
   Interoperability; N-dimensional; Open development; Open source;
-  Reproducibility;Cephalic furrow mechanics;Cephalic furrow patterning},
+  Reproducibility;Cephalic furrow mechanics},
   language = {en}
 }
 
@@ -971,6 +970,49 @@
   keywords = {Cephalic furrow mechanics}
 }
 
+@ARTICLE{Locovei2006-qe,
+  title = {Activation of pannexin 1 channels by ATP through P2Y receptors and by
+  cytoplasmic calcium},
+  author = {Locovei, Silviu and Wang, Junjie and Dahl, Gerhard},
+  journaltitle = {FEBS Lett.},
+  publisher = {Wiley},
+  volume = {580},
+  issue = {1},
+  pages = {239--244},
+  date = {2006-01-09},
+  doi = {10.1016/j.febslet.2005.12.004},
+  pmid = {16364313},
+  issn = {1873-3468,0014-5793},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1016/j.febslet.2005.12.004},
+  urldate = {2023-11-14},
+  keywords = {Pannexin; Purinergic receptor; Activation by calcium; ATP-induced
+  ATP release; Calcium wave;Cephalic furrow mechanics},
+  language = {en}
+}
+
+@ARTICLE{Shah2021-gh,
+  title = {Nuclear deformation causes DNA damage by increasing replication
+  stress},
+  author = {Shah, Pragya and Hobson, Chad M and Cheng, Svea and Colville,
+  Marshall J and Paszek, Matthew J and Superfine, Richard and Lammerding, Jan},
+  journaltitle = {Curr. Biol.},
+  publisher = {Elsevier BV},
+  volume = {31},
+  issue = {4},
+  pages = {753--765.e6},
+  date = {2021-02-22},
+  doi = {10.1016/j.cub.2020.11.037},
+  pmc = {PMC7904640},
+  pmid = {33326770},
+  issn = {0960-9822,1879-0445},
+  url = {http://dx.doi.org/10.1016/j.cub.2020.11.037},
+  urldate = {2023-11-15},
+  keywords = {DNA damage; cancer; cell compression; confined migration;
+  metastasis; nuclear deformation; nuclear envelope rupture; nuclear
+  mechanobiology; replication stress;Cephalic furrow mechanics},
+  language = {en}
+}
+
 @ARTICLE{Kondo2013-gy,
   title = {Mitotic cell rounding accelerates epithelial invagination},
   author = {Kondo, Takefumi and Hayashi, Shigeo},
@@ -1247,7 +1289,7 @@
   date = {2003},
   url = {https://inkscape.org},
   urldate = {2023},
-  keywords = {Cephalic furrow mechanics;Cephalic furrow patterning}
+  keywords = {Cephalic furrow mechanics}
 }
 
 @ARTICLE{Granger2021-zg,
@@ -1441,6 +1483,23 @@
   note = {Model and simulations for: Pre-patterned epithelial invagination
   prevents mechanical instability during fly gastrulation},
   keywords = {Supporting datasets;Cephalic furrow mechanics}
+}
+
+@ARTICLE{Bao2004-dx,
+  title = {Pannexin membrane channels are mechanosensitive conduits for ATP},
+  author = {Bao, Li and Locovei, Silviu and Dahl, Gerhard},
+  journaltitle = {FEBS Lett.},
+  publisher = {Wiley},
+  volume = {572},
+  issue = {1-3},
+  pages = {65--68},
+  date = {2004-08-13},
+  doi = {10.1016/j.febslet.2004.07.009},
+  pmid = {15304325},
+  issn = {0014-5793,1873-3468},
+  url = {http://dx.doi.org/10.1016/j.febslet.2004.07.009},
+  keywords = {Mechano-metabolism;Cephalic furrow mechanics},
+  language = {en}
 }
 
 @DATASET{Vellutini2023-ix,
