Update to latest reference metadata

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -8,10 +8,10 @@
   date = {1992-01-24},
   doi = {10.1016/0092-8674(92)90471-n},
   pmid = {1346368},
-  issn = {0092-8674},
+  issn = {0092-8674,1097-4172},
   url = {http://dx.doi.org/10.1016/0092-8674(92)90471-n},
   keywords = {Cephalic furrow;Cephalic furrow mechanics;Hox code;Brachiopod wnt
-  landscape;important;hox},
+  landscape;MorphoEvo proposal;important;hox},
   language = {en}
 }
 
@@ -24,7 +24,7 @@
   date = {2023-10-10},
   doi = {10.1101/2023.10.09.561568},
   url = {https://doi.org/10.1101/2023.10.09.561568},
-  keywords = {Cephalic furrow mechanics}
+  keywords = {Cephalic furrow mechanics;MorphoEvo proposal}
 }
 
 @BOOK{Campos-Ortega1985-ma,
@@ -67,7 +67,8 @@
   pmid = {22743772},
   issn = {1548-7091,1548-7105},
   url = {http://dx.doi.org/10.1038/nmeth.2019},
-  keywords = {Manuscript;Cephalic furrow mechanics;Brachiopod wnt landscape}
+  keywords = {Manuscript;Cephalic furrow mechanics;Brachiopod wnt
+  landscape;MorphoEvo proposal}
 }
 
 @ARTICLE{Harding1986-ei,
@@ -92,17 +93,17 @@
   origin of the bilaterian body plan},
   author = {Bruce, A E and Shankland, M},
   journaltitle = {Dev. Biol.},
-  publisher = {Elsevier},
+  publisher = {Elsevier BV},
   volume = {201},
   issue = {1},
   pages = {101--112},
   date = {1998-09-01},
   doi = {10.1006/dbio.1998.8968},
   pmid = {9733577},
-  issn = {0012-1606},
+  issn = {0012-1606,1095-564X},
   url = {http://dx.doi.org/10.1006/dbio.1998.8968},
   keywords = {Brachiopod segmentation;Head-Trunk Boundary;Cephalic
-  furrow;Cephalic furrow mechanics},
+  furrow;Cephalic furrow mechanics;MorphoEvo proposal},
   language = {en}
 }
 
@@ -128,33 +129,37 @@
   early morphogenesis},
   author = {Blankenship, J T and Wieschaus, E},
   journaltitle = {Development},
+  publisher = {The Company of Biologists},
   volume = {128},
   issue = {24},
   pages = {5129--5138},
   date = {2001-12},
+  doi = {10.1242/dev.128.24.5129},
   pmid = {11748148},
-  issn = {0950-1991},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/11748148},
+  issn = {0950-1991,1477-9129},
+  url = {https://www.ncbi.nlm.nih.gov/pubmed/11748148},
   keywords = {Cephalic furrow;Molecular patterning;Morphogenesis;Cephalic furrow
-  mechanics;Key papers;Proposal;pax3/7 = paired;evx = even
+  mechanics;Key papers;MorphoEvo proposal;pax3/7 = paired;evx = even
   skipped;buttonhead;important},
   language = {en}
 }
 
 @ARTICLE{Hartenstein1985-zs,
-  title = {Fate-mapping in wild-type \textit{{D}rosophila melanogaster}},
+  title = {Fate-mapping in wild-type\textit{{D}rosophila melanogaste}r: I. The
+  spatio-temporal pattern of embryonic cell divisions},
   author = {Hartenstein, Volker and Campos-Ortega, Jose A},
-  journaltitle = {Wilhelm Roux Arch. Entwickl. Mech. Org.},
-  publisher = {Springer-Verlag},
+  journaltitle = {Wilhelm Roux' Archiv},
+  publisher = {Springer Science and Business Media LLC},
   volume = {194},
   issue = {4},
   pages = {181--195},
   date = {1985-04-01},
-  doi = {10.1007/BF00848246},
-  issn = {0043-5546},
+  doi = {10.1007/bf00848246},
+  issn = {0340-0794,1432-041X},
   url = {http://link.springer.com/article/10.1007/BF00848246},
   urldate = {2016-07-04},
-  keywords = {Cephalic furrow;Cephalic furrow mechanics;Proposal;Drosophila},
+  keywords = {Cephalic furrow;Cephalic furrow mechanics;MorphoEvo
+  proposal;Drosophila},
   language = {en}
 }
 
@@ -193,6 +198,7 @@
   reorganization of {F}-actin},
   author = {Spencer, Allison K and Siddiqui, Bilal A and Thomas, Jeffrey H},
   journaltitle = {Dev. Biol.},
+  publisher = {Elsevier BV},
   volume = {402},
   issue = {2},
   pages = {192--207},
@@ -203,7 +209,7 @@
   url = {http://dx.doi.org/10.1016/j.ydbio.2015.03.022},
   keywords = {Apical constriction; Cell shape change; Cephalic furrow;
   Gastrulation; Invagination; Morphogenesis;Cephalic furrow;Cephalic furrow
-  mechanics;Key papers;Proposal;important},
+  mechanics;Key papers;MorphoEvo proposal;important},
   language = {en}
 }
 
@@ -253,15 +259,16 @@
   author = {Simeone, A and Acampora, D and Gulisano, M and Stornaiuolo, A and
   Boncinelli, E},
   journaltitle = {Nature},
+  publisher = {Springer Science and Business Media LLC},
   volume = {358},
   issue = {6388},
   pages = {687--690},
   date = {1992-08-20},
   doi = {10.1038/358687a0},
   pmid = {1353865},
-  issn = {0028-0836},
+  issn = {0028-0836,1476-4687},
   url = {http://dx.doi.org/10.1038/358687a0},
-  keywords = {Head-Trunk Boundary;Cephalic furrow mechanics},
+  keywords = {Head-Trunk Boundary;Cephalic furrow mechanics;MorphoEvo proposal},
   language = {en}
 }
 
@@ -356,7 +363,7 @@
   url = {http://dx.doi.org/10.1186/s12859-017-1934-z},
   keywords = {Extensibility; Image processing; ImageJ; ImageJ2;
   Interoperability; N-dimensional; Open development; Open source;
-  Reproducibility;Cephalic furrow mechanics},
+  Reproducibility;Cephalic furrow mechanics;MorphoEvo proposal},
   language = {en}
 }
 
@@ -382,6 +389,7 @@
   title = {From morphogen to morphogenesis and back},
   author = {Gilmour, Darren and Rembold, Martina and Leptin, Maria},
   journaltitle = {Nature},
+  publisher = {Springer Science and Business Media LLC},
   volume = {541},
   issue = {7637},
   pages = {311--320},
@@ -391,7 +399,7 @@
   issn = {0028-0836,1476-4687},
   url = {http://dx.doi.org/10.1038/nature21348},
   keywords = {Cephalic furrow;Cephalic furrow
-  mechanics;Mechano-development;important},
+  mechanics;Mechano-development;MorphoEvo proposal;important},
   language = {en}
 }
 
@@ -517,7 +525,7 @@
   url = {http://dev.biologists.org/cgi/pmidlookup?view=long&pmid=29945988},
   keywords = {Automatic background suppression; In situ HCR v3.0; Multiplexed
   quantitative in situ hybridization; dHCR imaging; qHCR flow cytometry; qHCR
-  imaging;Cephalic furrow mechanics;Proposal;methods},
+  imaging;Cephalic furrow mechanics;MorphoEvo proposal;methods},
   language = {en}
 }
 
@@ -534,7 +542,7 @@
   doi = {10.1007/978-1-4939-6371-3_10},
   isbn = {9781493963713},
   url = {https://doi.org/10.1007/978-1-4939-6371-3_10},
-  keywords = {Cephalic furrow mechanics}
+  keywords = {Cephalic furrow mechanics;MorphoEvo proposal}
 }
 
 @ARTICLE{Schmid2019-bm,
@@ -552,7 +560,7 @@
   pmid = {30886414},
   issn = {1548-7091,1548-7105},
   url = {http://dx.doi.org/10.1038/s41592-019-0359-1},
-  keywords = {Cephalic furrow mechanics},
+  keywords = {Cephalic furrow mechanics;MorphoEvo proposal},
   language = {en}
 }
 
@@ -608,7 +616,7 @@
   pmid = {30478326},
   issn = {1548-7091,1548-7105},
   url = {http://dx.doi.org/10.1038/s41592-018-0216-7},
-  keywords = {Cephalic furrow mechanics},
+  keywords = {Cephalic furrow mechanics;MorphoEvo proposal},
   language = {en}
 }
 
@@ -653,13 +661,15 @@
   cephalic furrow formation in \textit{{D}rosophila}},
   author = {Vincent, A and Blankenship, J T and Wieschaus, E},
   journaltitle = {Development},
+  publisher = {The Company of Biologists},
   volume = {124},
   issue = {19},
   pages = {3747--3754},
   date = {1997-10},
+  doi = {10.1242/dev.124.19.3747},
   pmid = {9367430},
-  issn = {0950-1991},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/9367430},
+  issn = {0950-1991,1477-9129},
+  url = {https://www.ncbi.nlm.nih.gov/pubmed/9367430},
   note = {The CF may therefore be viewed as transiently separating two
   morphogenetic fields. Whether the foremost expression of Engrailed in PS1 in
   Drosophila and at the midbrain-hindbrain boundary in vertebrates reflects the
@@ -667,7 +677,7 @@
   specialised evocation, is an interesting question for future consideration.},
   keywords = {Cephalic furrow;Head-Trunk Boundary;Molecular
   patterning;Morphogenesis;Mitotic domains;Cephalic furrow mechanics;Key
-  papers;Proposal;Drosophila;buttonhead;evx = even skipped;important},
+  papers;MorphoEvo proposal;Drosophila;buttonhead;evx = even skipped;important},
   language = {en}
 }
 
@@ -693,25 +703,27 @@
   epithelial folding during morphogenesis},
   author = {Denk-Lobnig, Marlis and Martin, Adam C},
   journaltitle = {Curr. Opin. Genet. Dev.},
+  publisher = {Elsevier BV},
   volume = {63},
   pages = {24--29},
-  date = {2020-03-11},
+  date = {2020-08-11},
   doi = {10.1016/j.gde.2020.02.014},
   pmid = {32171160},
   issn = {0959-437X,1879-0380},
   url = {http://dx.doi.org/10.1016/j.gde.2020.02.014},
   keywords = {Cephalic furrow mechanics;Mechano-development;Epithelial
-  folding;to be read},
+  folding;MorphoEvo proposal;to be read},
   language = {en}
 }
 
 @ARTICLE{Eritano2020-mi,
-  title = {Tissue-Scale Mechanical Coupling Reduces Morphogenetic Noise to
-  Ensure Precision during Epithelial Folding},
+  title = {Tissue-scale mechanical coupling reduces morphogenetic noise to
+  ensure precision during epithelial folding},
   author = {Eritano, Anthony S and Bromley, Claire L and Bolea Albero, Antonio
   and Schütz, Lucas and Wen, Fu-Lai and Takeda, Michiko and Fukaya, Takashi and
   Sami, Mustafa M and Shibata, Tatsuo and Lemke, Steffen and Wang, Yu-Chiun},
   journaltitle = {Dev. Cell},
+  publisher = {Elsevier BV},
   volume = {53},
   issue = {2},
   pages = {212--228.e12},
@@ -724,7 +736,7 @@
   shortening; epithelial folding; lateral myosin contractility; mechanical
   noise; morphogenetic precision; myosin planar polarity; optogenetics;
   robustness; tissue-scale mechanical coupling;Cephalic furrow;Cephalic furrow
-  mechanics;Key papers;Proposal;important},
+  mechanics;Key papers;MorphoEvo proposal;important},
   language = {en}
 }
 
@@ -810,7 +822,7 @@
   title = {Forces in tissue morphogenesis and patterning},
   author = {Heisenberg, Carl-Philipp and Bellaïche, Yohanns},
   journaltitle = {Cell},
-  publisher = {Elsevier},
+  publisher = {Elsevier BV},
   volume = {153},
   issue = {5},
   pages = {948--962},
@@ -820,7 +832,7 @@
   issn = {0092-8674,1097-4172},
   url = {http://dx.doi.org/10.1016/j.cell.2013.05.008},
   keywords = {Morphogenesis;Mechano-development;Cephalic furrow
-  mechanics;Proposal;important},
+  mechanics;MorphoEvo proposal;important},
   language = {en}
 }
 
@@ -829,6 +841,7 @@
   morphogenesis},
   author = {Collinet, Claudio and Lecuit, Thomas},
   journaltitle = {Nat. Rev. Mol. Cell Biol.},
+  publisher = {Springer Science and Business Media LLC},
   volume = {22},
   issue = {4},
   pages = {245--265},
@@ -839,7 +852,7 @@
   issn = {1471-0072,1471-0080},
   url = {http://dx.doi.org/10.1038/s41580-020-00318-6},
   keywords = {Cephalic furrow mechanics;Mechano-development;Epithelial
-  folding;Proposal;important},
+  folding;MorphoEvo proposal;important},
   language = {en}
 }
 
@@ -918,25 +931,6 @@
   url = {http://dx.doi.org/10.1073/pnas.1917838117},
   keywords = {Myosin II contractility; active torques; curling; epithelial
   morphogenesis; tissue mechanics;Cephalic furrow mechanics},
-  language = {en}
-}
-
-@ARTICLE{Wang2021-iy,
-  title = {The origin and the mechanism of mechanical polarity during epithelial
-  folding},
-  author = {Wang, Yu-Chiun},
-  journaltitle = {Semin. Cell Dev. Biol.},
-  volume = {120},
-  pages = {94--107},
-  date = {2021-12},
-  doi = {10.1016/j.semcdb.2021.05.027},
-  pmid = {34059419},
-  issn = {1084-9521,1096-3634},
-  url = {http://dx.doi.org/10.1016/j.semcdb.2021.05.027},
-  keywords = {Epithelial folding; Apical-basal polarity; Planar polarity;
-  Mechanical stress; Tissue strain; Curvature
-  transition;Mechano-development;Epithelial folding;Cephalic furrow
-  mechanics;important},
   language = {en}
 }
 
@@ -1115,7 +1109,7 @@
   pmid = {27412086},
   issn = {1367-4803,1367-4811},
   url = {https://academic.oup.com/bioinformatics/article-lookup/doi/10.1093/bioinformatics/btw413},
-  keywords = {Cephalic furrow mechanics},
+  keywords = {Cephalic furrow mechanics;MorphoEvo proposal},
   language = {en}
 }
 
@@ -1163,6 +1157,7 @@
   Christian and Grimaldi, David A and Beckenbach, Andrew T and Courtney, Gregory
   W and Friedrich, Markus and Meier, Rudolf and Yeates, David K},
   journaltitle = {Proc. Natl. Acad. Sci. U. S. A.},
+  publisher = {Proceedings of the National Academy of Sciences},
   volume = {108},
   issue = {14},
   pages = {5690--5695},
@@ -1172,7 +1167,7 @@
   pmid = {21402926},
   issn = {0027-8424,1091-6490},
   url = {http://dx.doi.org/10.1073/pnas.1012675108},
-  keywords = {Cephalic furrow mechanics;Proposal;important},
+  keywords = {Cephalic furrow mechanics;MorphoEvo proposal;important},
   language = {en}
 }
 
@@ -1216,18 +1211,21 @@
 }
 
 @ARTICLE{Keller2012-ca,
-  title = {Physical Biology Returns to Morphogenesis},
+  title = {Developmental biology. Physical biology returns to morphogenesis},
   author = {Keller, Ray},
   journaltitle = {Science},
+  publisher = {American Association for the Advancement of Science (AAAS)},
   volume = {338},
   issue = {6104},
   pages = {201--203},
-  date = {2012},
+  date = {2012-10-12},
   eprint = {https://www.science.org/doi/pdf/10.1126/science.1230718},
   doi = {10.1126/science.1230718},
-  issn = {0036-8075},
+  pmid = {23066066},
+  issn = {0036-8075,1095-9203},
   url = {https://www.science.org/doi/abs/10.1126/science.1230718},
-  keywords = {Mechano-development;Cephalic furrow mechanics;Proposal}
+  keywords = {Mechano-development;Cephalic furrow mechanics;MorphoEvo proposal},
+  language = {en}
 }
 
 @SOFTWARE{Matlab2015-nd,
@@ -1369,7 +1367,7 @@
   url = {https://zenodo.org/doi/10.5281/zenodo.7628299},
   urldate = {2023-02-10},
   keywords = {tutorial; imsane; imagej; matlab; ilastik; fiji;Cephalic furrow
-  mechanics;Software and resources}
+  mechanics;Software and resources;MorphoEvo proposal}
 }
 
 @INBOOK{Arganda-Carreras2006-im,
@@ -1430,7 +1428,7 @@
   issn = {0027-8424,1091-6490},
   url = {https://www.pnas.org/doi/abs/10.1073/pnas.1106377109},
   urldate = {2023-02-14},
-  keywords = {Cephalic furrow mechanics},
+  keywords = {Cephalic furrow mechanics;MorphoEvo proposal},
   language = {en}
 }
 
@@ -1573,7 +1571,7 @@
 
 @ARTICLE{Popkova2024-eg,
   title = {A mechanical wave travels along a genetic guide to drive the
-  formation of an epithelial furrow during {\textit{Drosophila}} gastrulation},
+  formation of an epithelial furrow during \textit{{Drosophila}} gastrulation},
   author = {Popkova, Anna and Andrenšek, Urška and Pagnotta, Sophie and Ziherl,
   Primož and Krajnc, Matej and Rauzi, Matteo},
   journaltitle = {Dev. Cell},
@@ -1589,7 +1587,52 @@
   urldate = {2024-01-18},
   keywords = {actomyosin contractility; de novo adherens junction; epithelial
   folding; morphogenetic propagation; multidimensional genetic guide; pacemaker;
-  trigger wave;Cephalic furrow mechanics},
+  trigger wave;Cephalic furrow mechanics;MorphoEvo proposal},
+  language = {en}
+}
+
+@ARTICLE{Wang2021-iy,
+  title = {The origin and the mechanism of mechanical polarity during epithelial
+  folding},
+  author = {Wang, Yu-Chiun},
+  journaltitle = {Semin. Cell Dev. Biol.},
+  publisher = {Elsevier BV},
+  volume = {120},
+  pages = {94--107},
+  date = {2021-12},
+  doi = {10.1016/j.semcdb.2021.05.027},
+  pmid = {34059419},
+  issn = {1084-9521,1096-3634},
+  url = {http://dx.doi.org/10.1016/j.semcdb.2021.05.027},
+  keywords = {Apical-basal polarity; Curvature transition; Epithelial folding;
+  Mechanical stress; Planar polarity; Tissue
+  strain;Mechano-development;Epithelial folding;Cephalic furrow
+  mechanics;MorphoEvo proposal;important},
+  language = {en}
+}
+
+@ARTICLE{Newman2000-oz,
+  title = {Epigenetic mechanisms of character origination},
+  author = {Newman, S A and Müller, G B},
+  journaltitle = {J. Exp. Zool.},
+  publisher = {Wiley},
+  volume = {288},
+  issue = {4},
+  pages = {304--317},
+  date = {2000-12-15},
+  doi = {10.1002/1097-010X(20001215)288:4<304::AID-JEZ3>3.0.CO;2-G},
+  pmid = {11144279},
+  issn = {0022-104X,1097-010X},
+  url = {http://dx.doi.org/10.1002/1097-010X(20001215)288:4<304::AID-JEZ3>3.0.CO;2-G},
+  note = {Standard view: evolution of form is a direct consequence of evolving
+  genetic programs.Proposal: relationship between genes and form is a highly
+  derived condition, a product of evolution (not its precondition).Helps
+  explaining Cambrian explosion, origins of morphological innovation, homology,
+  rapid change of form.[how does variation arive? genetic, developmental,
+  etc]Circuitry is an attractor of morphological design.},
+  keywords = {Animals; Biological Evolution; Body Patterning; Body Patterning:
+  genetics; Evolution; Genetic; Models; Phenotype;Mechano-evolution;Cephalic
+  furrow mechanics;MorphoEvo proposal;important},
   language = {en}
 }
 
@@ -1614,27 +1657,4 @@
   polarity;Manuscript;Segment polarity genes;Mutants;Molecular
   patterning;Cephalic furrow mechanics;foxG = sloppy paired;to be read},
   language = {en}
-}
-
-@ARTICLE{Newman2000-oz,
-  title = {Epigenetic mechanisms of character origination},
-  author = {Newman, S A and Müller, G B},
-  journaltitle = {J. Exp. Zool.},
-  volume = {288},
-  issue = {4},
-  pages = {304--317},
-  date = {2000-12},
-  doi = {10.1002/1097-010X(20001215)288:4<304::AID-JEZ3>3.0.CO;2-G},
-  pmid = {11144279},
-  issn = {0022-104X},
-  url = {http://dx.doi.org/10.1002/1097-010X(20001215)288:4<304::AID-JEZ3>3.0.CO;2-G},
-  note = {Standard view: evolution of form is a direct consequence of evolving
-  genetic programs.Proposal: relationship between genes and form is a highly
-  derived condition, a product of evolution (not its precondition).Helps
-  explaining Cambrian explosion, origins of morphological innovation, homology,
-  rapid change of form.[how does variation arive? genetic, developmental,
-  etc]Circuitry is an attractor of morphological design.},
-  keywords = {Animals; Biological Evolution; Body Patterning; Body Patterning:
-  genetics; Evolution; Genetic; Models; Phenotype;Mechano-evolution;Cephalic
-  furrow mechanics;Proposal;important}
 }
