Add references to abstract

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1515,6 +1515,25 @@
   language = {en}
 }
 
+@ARTICLE{Loffet2023-nj,
+  title = {Evo-devo mechanobiology: The missing link},
+  author = {Loffet, Elise A and Durel, John F and Nerurkar, Nandan L},
+  journaltitle = {Integr. Comp. Biol.},
+  publisher = {Oxford University Press (OUP)},
+  volume = {63},
+  issue = {6},
+  pages = {1455--1473},
+  date = {2023-12-29},
+  doi = {10.1093/icb/icad033},
+  pmid = {37193661},
+  issn = {1540-7063,1557-7023},
+  url = {https://academic.oup.com/icb/advance-article-pdf/doi/10.1093/icb/icad033/50356031/icad033.pdf},
+  urldate = {2023-05-17},
+  keywords = {Mechano-evolution;MorphoEvo proposal;Cephalic furrow mechanics;to
+  be read;important},
+  language = {en}
+}
+
 @DATASET{Vellutini2023-ix,
   title = {Figures and videos for: Patterned embryonic invagination evolved in
   response to mechanical instability},
@@ -1550,7 +1569,7 @@
 
 @ARTICLE{Strobl2024-kh,
   title = {A two-level staging system for the embryonic morphogenesis of the
-  Mediterranean fruit fly (medfly) Ceratitis capitata},
+  {Mediterranean} fruit fly (medfly) \textit{{Ceratitis capitata}}},
   author = {Strobl, Frederic and Schmitz, Alexander and Schetelig, Marc F and
   Stelzer, Ernst H K},
   journaltitle = {PLoS One},
